# stackgenie

./: .gitignore  README.md  pyproject.toml  render.yaml
src/stackgenie/: claude.py  main.py  notion.py
