[project]
name = "stackgenie"
version = "0.1.0"
description = "Refine Notion draft blog posts with Claude"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "notion-client>=2.2.1,<3.0.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.24.2",
]

[project.scripts]
stackgenie = "stackgenie.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stackgenie"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
